--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,12 @@ body {
 
 .App {
   text-align: center;
+  animation: fade-in 2s forwards;
 }
 
 .Render {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -46,4 +47,14 @@ input {
 
 #values {
   height: 50px;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0%;
+  }
+
+  to {
+    opacity: 100%;
+  }
 }
