--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,33 @@
 body {
   overflow: hidden;
-  background: linear-gradient(60deg, magenta, cyan);
+ 
+}
+
+h1 {
+  font-size: calc(16px + 20vw);
+  opacity: 15%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
 }
 
 .App {
-  text-align: center;
-  animation: fade-in 2s forwards;
+  background: linear-gradient(60deg, magenta, cyan);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Render {
   position: absolute;
   z-index: 1;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -33,10 +44,6 @@ body {
   color: #61dafb;
 }
 
-button {
-  font-size: calc(10px + 2vmin);
-}
-
 input {
   background: none;
   font-size: large;
@@ -49,12 +56,37 @@ input {
   height: 50px;
 }
 
-@keyframes fade-in {
-  from {
-    opacity: 0%;
-  }
+.fade-in {
+  opacity: 0;
+  animation: fade-in 1s forwards 2s
+}
 
-  to {
-    opacity: 100%;
-  }
+@keyframes fade-in {
+  from { opacity: 0%; }
+  to { opacity: 100%; }
+}
+
+svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+button {
+  position: absolute;
+  opacity: 50%;
+  transition: all 0.3s;
+  border: none;
+  background: none;
+  height: 40px;
+  width: 40px;
+  color: white;
+}
+
+button:hover {
+  opacity: 100%;
+  transform: scale(1.1);
 }
