--- a/test/src/App.css
+++ b/test/src/App.css
@@ -13,30 +13,31 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.main {
+  background-color: #111;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 button {
   font-size: calc(10px + 2vmin);
+}
+
+.phoneme {
+  font-size: 160px;
+  width: 160px;
+  height: 160px;
+  text-align: center;
+  opacity: 25%;
+  transition: all .2s;
+  cursor: default;
+  user-select: none;
+}
+
+.phoneme:hover {
+  opacity: 100%;
 }
