--- a/test/src/App.css
+++ b/test/src/App.css
@@ -29,6 +29,8 @@ button {
 
 .phoneme {
   font-size: 160px;
+  -webkit-text-stroke: 2px white;
+  color: transparent;
   width: 160px;
   height: 160px;
   text-align: center;
@@ -40,4 +42,5 @@ button {
 
 .phoneme:hover {
   opacity: 100%;
+  -webkit-text-stroke-color: #00ffaa;
 }
