--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,18 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .main {
   background-color: #111;
   min-height: 100vh;
@@ -21,10 +6,6 @@
   justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-button {
-  font-size: calc(10px + 2vmin);
 }
 
 .phoneme {
@@ -42,5 +23,48 @@ button {
 
 .phoneme:hover {
   opacity: 100%;
-  -webkit-text-stroke-color: #00ffaa;
+}
+
+.voice-panel {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  /* border: 3px #222 solid; */
+  padding: 20px;
+  border-radius: 10px; 
+}
+
+.control-panel {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  /* border: 3px #222 solid; */
+  padding: 20px;
+  /* border-radius: 10px;  */
+}
+
+.voice-toggle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 45px;
+}
+
+.toggle {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 2px white solid;
+  background: #0fa;
+  transition: all .1s;
+  cursor: pointer;
+}
+
+.name {
+  font-weight: 600;
+  font-size: 2rem;
+  transition: all .1s;
+  cursor: default;
+  user-select: none;
 }
